Пространство данных добавлено
Это пространство решает проблему, когда интерфейс и main файл работают с одной и той же статической переменной, но изменения этой переменной из одного файла, не меняет её саму для другого.

--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="ImGuiTail.cpp" />
+    <ClCompile Include="InfoSpace.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myfont.cpp" />
     <ClCompile Include="Queen.cpp" />
@@ -153,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ant.h" />
+    <ClInclude Include="InfoSpace.h" />
     <ClInclude Include="myfont.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="ImGuiTail.h" />
