--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -136,7 +136,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
+    <ClCompile Include="Cell.cpp" />
+    <ClCompile Include="DrawField.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="Food.cpp" />
     <ClCompile Include="ImGuiTail.cpp" />
     <ClCompile Include="InfoSpace.cpp" />
@@ -157,7 +160,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ant.h" />
+    <ClInclude Include="Cell.h" />
+    <ClInclude Include="Collector.h" />
+    <ClInclude Include="DrawField.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Field.h" />
     <ClInclude Include="Food.h" />
     <ClInclude Include="InfoSpace.h" />
     <ClInclude Include="Insect.h" />
