--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="InfoSpace.cpp" />
     <ClCompile Include="Insect.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Materials.cpp" />
     <ClCompile Include="myfont.cpp" />
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Scout.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Food.h" />
     <ClInclude Include="InfoSpace.h" />
     <ClInclude Include="Insect.h" />
+    <ClInclude Include="Materials.h" />
     <ClInclude Include="myfont.h" />
     <ClInclude Include="ImGuiTail.h" />
     <ClInclude Include="includes.h" />
