--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Cell.cpp" />
+    <ClCompile Include="Colony.cpp" />
     <ClCompile Include="DrawField.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Ant.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="Collector.h" />
+    <ClInclude Include="Colony.h" />
     <ClInclude Include="DrawField.h" />
     <ClInclude Include="DrawAnts.cpp" />
     <ClInclude Include="Entity.h" />
