--- a/Ants_Colony.vcxproj.filters
+++ b/Ants_Colony.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Colony">
       <UniqueIdentifier>{4eab4f1e-e2c1-43e1-9e4d-420d99731162}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Няньки">
+      <UniqueIdentifier>{22927afd-9674-4109-9623-5e3a04801e3e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -119,6 +122,9 @@
     </ClCompile>
     <ClCompile Include="Colony.cpp">
       <Filter>Colony</Filter>
+    </ClCompile>
+    <ClCompile Include="Nurse.cpp">
+      <Filter>Муравьи</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -208,6 +214,9 @@
     </ClInclude>
     <ClInclude Include="Colony.h">
       <Filter>Colony</Filter>
+    </ClInclude>
+    <ClInclude Include="Nurse.h">
+      <Filter>Муравьи</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
