--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -108,7 +108,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)SFML-2.6.2\include</AdditionalIncludeDirectories>
     </ClCompile>
@@ -139,7 +139,6 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Cell.cpp" />
-    <ClCompile Include="Colony.cpp" />
     <ClCompile Include="DrawField.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -147,7 +146,6 @@
     <ClCompile Include="ImGuiTail.cpp" />
     <ClCompile Include="InfoSpace.cpp" />
     <ClCompile Include="Insect.cpp" />
-    <ClCompile Include="Maggot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Materials.cpp" />
     <ClCompile Include="myfont.cpp" />
