--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -152,6 +152,8 @@
     <ClCompile Include="Nurse.cpp" />
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Scout.cpp" />
+    <ClCompile Include="SFMLWindow.cpp" />
+    <ClCompile Include="SFMLWindow.h" />
     <ClCompile Include="Soldier.cpp" />
     <ClCompile Include="Stockpile.cpp" />
     <ClCompile Include="vendor\ImGui\backends\imgui_impl_dx9.cpp" />
