еще прооптимизировали this program

--- a/Ants_Colony.vcxproj
+++ b/Ants_Colony.vcxproj
@@ -74,7 +74,7 @@
     <IncludePath>$(ProjectDir)\vendor\ImGui\backends;$(ProjectDir)\vendor\ImGui;$(ProjectDir)SFML-2.6.2;$(ProjectDir)images</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)\vendor\ImGui\backends;$(ProjectDir)\vendor\ImGui;$(ProjectDir)SFML-2.6.2;$(ProjectDir)images</IncludePath>
+    <IncludePath>$(ProjectDir)SFML-2.6.2;$(ProjectDir)images</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -134,7 +134,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;sfml-audio.lib;d3d9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;sfml-audio.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)SFML-2.6.2\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
